tests/baselines/reference/parserGreaterThanTokenAmbiguity16.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity16.ts (1 errors) ====
    1 >>>= 2;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.